tests/invalid/c_style_for_invalid_condition_type.wio
fn Entry(args: string[]) -> i32 {
    for (mut i: i32 = 0; "nope"; i += 1) {
    }

    return 0;
}
